--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
     <style>
       body {
         font-family: Arial, sans-serif;
-        margin: 20px;
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background-color: #f4f4f9;
+      }
+      #form-container {
+        width: 50%;
+        padding: 20px;
+        background: white;
+        border-radius: 8px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        text-align: center;
       }
       .form-group {
         margin-bottom: 15px;
@@ -25,10 +38,13 @@
         width: 100%;
         padding: 8px;
         box-sizing: border-box;
+        margin-bottom: 10px;
       }
       .checkbox-group {
         display: flex;
         align-items: center;
+        justify-content: center;
+        margin-bottom: 15px;
       }
       .checkbox-group label {
         margin-left: 5px;
@@ -39,50 +55,64 @@
         padding: 10px 15px;
         border: none;
         cursor: pointer;
+        font-size: 16px;
+        border-radius: 4px;
       }
       button:hover {
         background-color: #45a049;
       }
+      #success-message {
+        display: none;
+        font-size: 20px;
+        color: green;
+        margin-top: 20px;
+      }
     </style>
   </head>
   <body>
-    <h2>RSVP Form</h2>
+    <div id="form-container">
+      <h2>RSVP Form</h2>
 
-    <form
-      id="rsvpForm"
-      name="landingForm"
-      onsubmit="createObject(); return false;"
-    >
-      <div class="form-group">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required />
+      <form
+        id="rsvpForm"
+        name="landingForm"
+        onsubmit="submitForm(); return false;"
+      >
+        <div class="form-group">
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required />
+        </div>
+        <div class="form-group">
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required />
+        </div>
+        <div class="form-group">
+          <label for="company">Company Name:</label>
+          <input type="text" id="company" name="company" />
+        </div>
+        <div class="form-group">
+          <label for="phone">Phone Number:</label>
+          <input type="tel" id="phone" name="phone" />
+        </div>
+        <div class="form-group checkbox-group">
+          <input type="checkbox" id="rsvp" name="rsvp" />
+          <label for="rsvp">RSVP (Check for Yes)</label>
+        </div>
+        <button type="submit">Submit</button>
+      </form>
+
+      <div id="success-message">
+        <p>Form submitted successfully!</p>
       </div>
-      <div class="form-group">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required />
-      </div>
-      <div class="form-group">
-        <label for="company">Company Name:</label>
-        <input type="text" id="company" name="company" />
-      </div>
-      <div class="form-group">
-        <label for="phone">Phone Number:</label>
-        <input type="tel" id="phone" name="phone" />
-      </div>
-      <div class="form-group checkbox-group">
-        <input type="checkbox" id="rsvp" name="rsvp" />
-        <label for="rsvp">RSVP (Check for Yes)</label>
-      </div>
-      <button type="submit">Submit</button>
-    </form>
+    </div>
 
     <script>
       var config = {
         fields: {
-          Contact: "#name", // Name of a contact, registering to the event
-          "Contact.MobilePhone": "#phone", // Contact's mobile phone
-          "Contact.JobTitle": "#company", // Contact's job title
-          "Contact.Email": "#email", // Contact's email
+          "Name": "#name", // Name of a contact, registering to the event
+          "MobilePhone": "#phone", // Contact's mobile phone
+          "Company": "#company", // Contact's job title
+          "Email": "#email", // Contact's email
         },
         contactFields: {
           FullName: "#name", // Name of a contact
@@ -90,14 +120,19 @@
           Email: "#email", // Contact's email
         },
         customFields: {},
-        landingId: "b0811ad9-ca59-45c9-a001-22b8fedb7ab2",
+        landingId: "57e4c008-060e-4352-be40-10b2433ba3ff",
         serviceUrl:
           "https://implemify.creatio.com/0/ServiceModel/GeneratedObjectWebFormService.svc/SaveWebFormObjectData",
         redirectUrl: "", // Add a redirect URL here if needed
       };
 
-      function createObject() {
+      function submitForm() {
+        // Trigger landing page object creation
         landing.createObjectFromLanding(config);
+
+        // Show success message and hide form
+        $("#rsvpForm").hide();
+        $("#success-message").fadeIn();
       }
 
       function initLanding() {
