--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
     <script>
       var config = {
         fields: {
-          "Name": "#name", // Name of a contact, registering to the event
-          "MobilePhone": "#phone", // Contact's mobile phone
-          "Company": "#company", // Contact's job title
-          "Email": "#email", // Contact's email
+          "Contact": "#name", // Name of a contact, registering to the event
+          "Contact.MobilePhone": "#phone", // Contact's mobile phone
+          "Contact.Account": "#company", // Contact's job title
+          "Contact.Email": "#email", // Contact's email
         },
         contactFields: {
           FullName: "#name", // Name of a contact
@@ -120,7 +120,7 @@
           Email: "#email", // Contact's email
         },
         customFields: {},
-        landingId: "57e4c008-060e-4352-be40-10b2433ba3ff",
+        landingId: "1a9d890a-db08-4606-9980-3f63a0d86be7",
         serviceUrl:
           "https://implemify.creatio.com/0/ServiceModel/GeneratedObjectWebFormService.svc/SaveWebFormObjectData",
         redirectUrl: "", // Add a redirect URL here if needed
